port: Minecraft 1.20.4 for Fabric and NeoForge (P-B1)
- NBT instead of data components (storage-block data, bag inventory/weights, power level)
- pre-StreamCodec payloads (write + reading constructor); NeoForge 20.4 IPayloadRegistrar,
  Fabric API 0.97 channels
- 1.20.4 vertex API, data folders recipes/ and tags/items, Java 17
- Sophisticated Backpacks on both loaders (NeoForge 3.20.6, Fabric port 3.20.7); the Fabric
  build unpacks the modules nested in the Core jar (not on any public maven)
- 77 unit tests, 17 Fabric GameTests green

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>