@@ -3,9 +3,9 @@ package sophisticated.building.item.upgrade;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.server.level.ServerPlayer;
-import net.neoforged.neoforge.network.PacketDistributor;
 import net.minecraft.core.registries.BuiltInRegistries;
 import sophisticated.building.network.message.BackpackItemCountPacket;
+import sophisticated.building.platform.Services;
 import sophisticated.building.compatibility.CuriosCompatHelper;
 import sophisticated.building.integration.BackpackScanCompat;
 import net.p3pp3rf1y.sophisticatedbackpacks.backpack.wrapper.BackpackWrapper;
@@ -158,7 +158,7 @@ public class BuildingUpgradeHelper {
 
     private static Optional<UUID> backpackContentsUuid(ItemStack backpackStack) {
         try {
-            return BackpackWrapper.fromStack(backpackStack).getContentsUuid();
+            return BackpackWrapper.fromData(backpackStack).getContentsUuid();
         } catch (Exception | LinkageError e) {
             return Optional.empty();
         }
@@ -177,12 +177,12 @@ public class BuildingUpgradeHelper {
         }
 
         try {
-            IStorageWrapper wrapper = BackpackWrapper.fromStack(backpackStack);
+            IStorageWrapper wrapper = BackpackWrapper.fromData(backpackStack);
 
             UpgradeHandler upgradeHandler = wrapper.getUpgradeHandler();
             var typeWrappers = upgradeHandler.getTypeWrappers(BuildingUpgradeItem.TYPE);
             if (!typeWrappers.isEmpty()) {
-                return typeWrappers.getFirst();
+                return typeWrappers.get(0);
             }
 
             // getTypeWrappers only contains wrappers that were enabled when the type cache was last
@@ -284,7 +284,7 @@ public class BuildingUpgradeHelper {
         // Sync remaining count to client
         if (!simulate && totalExtracted > 0 && player instanceof ServerPlayer serverPlayer) {
             int remaining = countBlockInBackpacksForDisplay(player, blockItem);
-            PacketDistributor.sendToPlayer(serverPlayer, new BackpackItemCountPacket(
+            Services.NETWORK.sendToPlayer(serverPlayer, new BackpackItemCountPacket(
                     BuiltInRegistries.ITEM.getKey(blockItem.getItem()),
                     remaining
             ));
